[package]
name = "harns"
version = "0.4.2"
description = "TX failure insurance protocol for Solana. Escrow-based premium pool with automatic refund engine."
edition = "2021"
license = "MIT"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "harns"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.0"

[dev-dependencies]
anchor-client = "0.29.0"
